<resources>
    <string name="app_name">LoveSpot</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_live_card_service">Hello World LiveCard</string>
    <string name="action_stop">Stop</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="menu_calendar">Days</string>
    <string name="menu_select_sex">Sex</string>
    <string name="menu_edit_profile">Edit Profile</string>
    <string name="menu_send_a_kiss">Send a kiss</string>
    <string name="menu_send_message">Send a message</string>
    <string name="menu_edit_partner">Partners</string>
    <string name="dialog_menu_title">Are you a guy or a girl?</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="hint_login_username">Username</string>
    <string name="hint_login_password">Password</string>
    <string name="log_in_button">SIGN IN</string>
    <string name="sign_up_text">Don\'t have an account? Sign up!</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="hint_email">Email</string>
    <string name="sign_up_error_message">Please make sure you enter username, password and email address!</string>
    <string name="error_unable_to_sign_in">You were unable to sign in. Please try again</string>
    <string name="sign_up_error_title">Oops!</string>
    <string name="login_error_message">Please make sure you enter email and password!</string>
    <string name="general_login_error_message">Login unsuccessful, please try again.</string>
    <string name="load_settings_error">I could not load your profile due to a server error. Please try again.</string>
    <string name="login_error_title">Oops!</string>
    <string name="general_error_title">Oops!</string>
    <string name="logout_menu_title">Logout</string>
    <string name="tab_love_days_title">Love Days</string>
    <string name="tab_love_box_title">Love Box</string>
    <string name="tab_friends_title">Friends</string>
    <string name="no_friends_added_message">Add friends to begin</string>
    <string name="no_messages">You have no messages. Swipe down to refresh.</string>
    <string name="title_activity_edit_friends">EditFriendsActivity</string>
    <string name="error_title">Oops!</string>
    <string name="menu_camera">Camera</string>
    <string name="error_message_toast_external_storage">There was a problem accessing your device\'s external storage</string>
    <string name="general_error_message">Sorry, there was an error</string>
    <string name="warning_max_video_size">The selected video must be less than 10MB.</string>
    <string name="error_selected_file">There was a problem with the selected file.</string>
    <string name="error_file_too_large">The selected file is too large.</string>
    <string name="title_activity_recipients">ActivityRecipients</string>
    <string name="recipients_send_button_action_bar">Send</string>
    <string name="error_sending_file_selected">There was an error with the file selected. Please select a different file.</string>
    <string name="error_sending_file">The message was not sent. Please try again.</string>
    <string name="error_loading_thumbnail">Error loading the thumbnail image</string>
    <string name="message_successfully_sent">The message was sent successfully</string>
    <string name="title_activity_view_image">ViewImageActivity</string>
    <string name="main_message_female">Your upcoming fertile days are:</string>
    <string name="main_message_male">Your partner\'s upcoming fertile days are:</string>
    <string name="messaged_successfully_saved_to_server">Your selection was saved</string>
    <string name="messaged_unsuccessfully_saved_to_server">There was a server error and your selection was not saved. Please try again later.</string>
    <string name="error_sending_message">Error sending message. Please try again.</string>
    <string name="send_a_kiss_message">kisses you</string>
    <string name="send_a_kiss_toast_successful">You sent a kiss</string>
    <string name="send_a_kiss_toast_unsuccessful">Error sending kiss</string>
    <string name="send_a_message_message">sent you a message</string>
    <string name="title_receive_a_kiss_message">You received a kiss</string>
    <string name="push_receive_a_kiss">sent you a kiss</string>
    <string name="title_receive_a_message_message">You received a message</string>
    <string name="title_update_calendar_notification">Sexy Calendar update</string>
    <string name="button_send_kiss">Send a kiss</string>
    <string name="button_send_message">Send a message</string>
    <string name="send_message_to">To:_____</string>
    <string name="send_message_to_add_users">To: </string>
    <string name="no_existing_partners_message">Add a partner first</string>
    <string name="view_sexy_calendar_button">Sexy Calendar</string>
    <string name="title_activity_send_message">SendMessage</string>
    <string name="title_activity_send_to">SendTo</string>
    <string name="title_activity_view_movie">ViewMovieActivity</string>
    <string name="title_activity_sexy_calendar">SexyCalendar</string>
    <string name="show_private_days_dialog_button">Private Days</string>
    <string name="error_sending_calendar_updates">Sorry, there was an error sending the Sexy Calendar update</string>
    <string name="calendar_update_sent_singular">You sent Sexy Calendar update to your partner</string>
    <string name="calendar_update_sent">You sent Sexy Calendar update</string>
    <string name="calendar_saved">Your Sexy Calendar update was saved</string>
    <string name="share_sexy_calendar_checkbox">Share your Sexy Calendar with your partner(s)</string>
    <string name="push_notification_message_update_sexy_calendar">updated her Sexy Calendar</string>
    <string name="sexy_calendar_for_guys">Sexy Calendar for guys</string>
    <string name="top_message_sexy_calendar_for_guys">Check the sexy calendar of your partner</string>
    <string name="image_rotate_left">Rotate left</string>
    <string name="image_rotate_right">Rotate right</string>
    <string name="title_activity_view_text_message">ViewTextMessageActivity</string>
    <string name="error_user_registered_but_unable_to_log_in">The user was successfully created but you were unable to log in due to a server error. Please try again</string>
    <string name="error_uploading_file">File upload error</string>
    <string name="selection_saved_successfully">Your selection was saved</string>
    <string name="selection_not_saved">Your selection was not saved due to a server problem </string>
    <string name="logout_error">Can\'t log out due to a server error</string>
    <string name="empty_search_field_message">Please enter a valid email address</string>
    <string name="general_server_error">Sorry, there was a server error</string>
    <string name="partner_hasnt_updated_calendar">has not updated her calendar</string>
    <string name="general_calendar_error">Please update your Private Days</string>
    <string name="fragment_love_days_generic_title">Please update your private days to start using all of LoveSpot\'s functions</string>
    <string name="no_partners_message">Connect with a partner to start using LoveSpot</string>
    <string name="no_partners_found">No partners were found</string>
    <string name="edit_partners_search_button">Search</string>
    <string name="edit_partners_search_hint">Email</string>
    <string name="partner_request_sent_toast">Your partner request was sent</string>
    <string name="partner_request_not_sent_toast">Your partner request was not sent. Please try again.</string>
    <string name="dialog_partner_request_already_sent_title">Waiting for love</string>
    <string name="dialog_partner_request_already_sent_to_user_message">You have already sent a love request to</string>
    <string name="new_partner_request">New partner request</string>
    <string name="new_partner_request_push">wants to become your partner</string>
    <string name="search_partners_tab">Search</string>
    <string name="requests_partners_tab">Requests</string>
    <string name="existing_partners_tab">Partners</string>
    <string name="pending_partner_request_accept_button">Accept</string>
    <string name="pending_partner_request_reject_button">Reject</string>
    <string name="partner_search_list_button">Add</string>
    <string name="partner_delete_list_button">Delete</string>
    <string name="no_pending_partner_requests_message">You have no pending partner requests. Swipe down to refresh.</string>
    <string name="new_partner_added_successfully">Partner was added</string>
    <string name="existing_partner_deleted">Partner was deleted</string>
    <string name="dialog_delete_partner_confirmation">Are you sure you want to beak up with</string>
    <string name="dialog_delete_partner_general_message">Are you sure you want to break up?</string>
    <string name="dialog_delete_partner_yes_button">Yes</string>
    <string name="dialog_delete_partner_no_button">No</string>
    <string name="toast_no_love_message">Please compose your love message first</string>
    <string name="toast_no_recepients">To who should I send the message to?</string>
    <string name="dialog_box_deleting_partner">Are you breaking up?</string>
    <string name="push_message_kiss">You received a kiss</string>
    <string name="push_calendar_update">updated her Sexy Calendar</string>
    <string name="push_message_love_message">sent you a love message</string>
    <string name="progress_sign_in_message">Signing in, please wait.</string>
    <string name="logout_message">Logging out</string>
    <string name="uploading_file_message">Uploading file...</string>
    <string name="error_uploading_profile_pic">Error uploading your profile picture</string>
    <string name="error_associating_profile_pic_with_profile">Error associating the picture with your profile</string>
    <string name="profile_pic_uploaded_successfully">Your profile picture was uploaded</string>
    <string name="saving_preferences_message">Saving your preferences...</string>
    <string name="message_disappearing">Disappearing in</string>
    <string name="hours">hours</string>
    <string name="minutes">minutes</string>
    <string name="minute">1 minute</string>
    <string name="sending_message">Sending love message...</string>
    <string name="sexy_calendar_default_message_guys">is a guy</string>
    <string name="love_message_title">Today\'s love message from</string>
    <string name="first_day_of_cycle_before_average_cycle_length">Select a date that does not exceed your average cycle length</string>
    <string name="change_sexy_status_hint">Tell your partner how you feel</string>
    <string name="empty_sexy_status">Enter your status first</string>
    <string name="error_updating_status">Error updating your status. Please try again.</string>
    <string name="saving_message">Saving...</string>
    <string name="sexy_status_saved_message">Your sexy status was saved</string>
    <string name="signing_in_message">Signing in...</string>
    <string name="choose_partner_label">Choose your partner</string>
    <string name="refresh_partner">Refresh partner</string>
    <string name="message_can_send_only_one_message_per_day">You can send only one love message per day to each of your partners. Make it count!</string>
    <string name="message_can_send_one_message_per_day_not_show_again">Don\'t show this again</string>
    <string name="title_dialog_one_message_per_day">Make it count!</string>
    <string name="alert_dialog_title_too_many_messages">Go slow!</string>
    <string name="you_have_to_wait">You can send only one love message per day to your loved one. Make the next one count!</string>
    <string name="time_left">Time left:</string>
</resources>