<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
   <item
       android:id="@+id/menu_send_kiss"
       android:title="@string/menu_send_a_kiss"
       android:icon="@drawable/ic_kiss"
       app:showAsAction="always"
       android:showAsAction="always"
       />

    <item
        android:id="@+id/menu_send_message"
        android:title="@string/menu_send_message"
        android:icon="@drawable/ic_action_chat"
        app:showAsAction="always"
        android:showAsAction="always"
        />
    <item
        android:id="@+id/partner_request"
        android:title="@string/new_partner_request"
        android:icon="@drawable/ic_action_add_person"
        app:showAsAction="always"
        android:showAsAction="always"
        android:visible="false"
        />

    <item
        android:id="@+id/refresh"
        android:title="@string/refresh_partner"
        android:icon="@drawable/ic_action_refresh"
        app:showAsAction="always"
        android:showAsAction="always"
        android:visible="true"
        />


</menu>