<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingRight="@dimen/default_padding"
    android:paddingLeft="@dimen/default_padding"
    android:paddingTop="@dimen/default_padding"
    android:paddingBottom="@dimen/default_padding">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_dialog_one_message_per_day"
        style="@style/DialogWindowTitle"/>

    <TextView
        android:id="@+id/drawerListItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message_can_send_only_one_message_per_day"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_padding"
        android:layout_marginBottom="@dimen/default_padding"
        android:text="@string/message_can_send_one_message_per_day_not_show_again"
        android:id="@+id/checkBoxNotShowAgain" />
</LinearLayout>